abstract build configs
Keeping all the configurations in a single place improves maintainability.
Here, we create an **ext** object inside the **root's build.gradle**, and create properties for the build configurations. We are referencing these properties from the **app's build.gradle**

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,15 +5,17 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion build_config.compileSdkVersion
+
     defaultConfig {
-        applicationId "com.sumitanantwar.zerotohero_android"
-        minSdkVersion 17
-        targetSdkVersion 28
+        applicationId build_config.package
+        minSdkVersion build_config.minSdkVersion
+        targetSdkVersion build_config.targetSdkVersion
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
