--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+
+    ext {
+        //=== Build Config ===
+        build_config = [
+                package          : "com.sumitanantwar.zerotohero_android",
+                compileSdkVersion: 28,
+                targetSdkVersion : 28,
+                minSdkVersion    : 17,
+        ]
+    }
+
+
     ext.kotlin_version = '1.2.61'
     repositories {
         google()
