add App Version Generator script
add a Gradle Script which will automatically generate formatted **Version Code** and **Version Name**.

This removes the confusion from the app versioning.

**Usage**
Increment the *major, minor* and *patch* values based on the release type.
Increment *build* value for every internal/production release.

Example:
major : 1
minor : 0
patch : 3
build : 2

Computed Version Code :  1000302
Computed Version Name : 1.0.3

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,9 @@ android {
         applicationId build_config.package
         minSdkVersion build_config.minSdkVersion
         targetSdkVersion build_config.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode version_code
+        versionName version_name
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
