--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ buildscript {
         //=== Build Config ===
         build_config = [
                 package          : "com.sumitanantwar.zerotohero_android",
-                compileSdkVersion: 28,
-                targetSdkVersion : 28,
+                compileSdkVersion: 27,
+                targetSdkVersion : 27,
                 minSdkVersion    : 17,
         ]
 
@@ -22,19 +22,23 @@ buildscript {
         version_code = app_ver.major * 1000000 + app_ver.minor * 10000 + app_ver.patch * 100 + app_ver.build
         version_name = "${app_ver.major}.${app_ver.minor}.${app_ver.patch}"
 
+        //=== Dependency Versions ===
+        dependency = [
+                kotlin              : "1.2.61",
+                support             : "27.1.1",
+                constraint_layout   : "1.1.2"
+        ]
 
 
     }
 
-
-    ext.kotlin_version = '1.2.61'
     repositories {
         google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.4'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${dependency.kotlin}"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
