--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,10 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+
+// Accessor for local.properties
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
 
 android {
     compileSdkVersion build_config.compileSdkVersion
@@ -15,12 +17,22 @@ android {
         versionName version_name
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        // Read the Crashlytics Key from local.properties
+        manifestPlaceholders = [crashlytics_key: properties.get("crashlytics.key")]
     }
 
     buildTypes {
+
+        debug {
+            applicationIdSuffix ".dev"
+            resValue "string", "app_name", "CC Player DEV"
+        }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            resValue "string", "app_name", "CC Player"
         }
     }
 }
@@ -38,8 +50,33 @@ dependencies {
     // Timber
     implementation "com.jakewharton.timber:timber:${dependency.timber}"
 
+    // Crashlytics
+    implementation('com.crashlytics.sdk.android:crashlytics:2.8.0@aar') {
+        transitive = true;
+    }
+
+
     // Tests
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
+
+
+buildscript {
+
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+    mavenCentral()
+}
+
+apply plugin: 'io.fabric'
